@@ -211,7 +211,7 @@ class CampaignProcess extends TuberiaProcess
                 usleep(5000000);
             } else {
                 $this->_log->output('INFO: conexión a DB restaurada, se reinicia operación normal.');
-                //$this->_multiplex->setDBConn($this->_db);
+                $this->_configDB->setDBConn($this->_db);
             }
         }
 
